--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
 .body{background-color: black; color: aqua;text-align: center;padding: 2px;
 font-size: 6px;}
 
-.personagem{width: 20%;
+.elden{width: 20%;
+
+
+}
+
+
+.aa{ padding: 5px;
+
 
 }
