--- a/style.css
+++ b/style.css
@@ -1,16 +1,5 @@
-.foto {width: 50%;
+.foto {width: 20%;
 }
 
-.body{background-color: black; color: aqua;text-align: center;padding: 2px;
+.body{background-color: rgb(248, 0, 0); color: rgb(0, 0, 0);text-align: center;padding: 2px;
 font-size: 6px;}
-
-.elden{width: 20%;
-
-
-}
-
-
-.aa{ padding: 5px;
-
-
-}
