--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 .foto {width: 20%;
 }
 
-body{background-color: rgb(248, 0, 0); color: rgb(0, 0, 0);text-align: center;padding: 2px;
-font-size: 6px;}
+body{background-color: rgb(247, 0, 0); padding: 3px; font-style: italic;
+     font-size: 8px;
+
+}
