--- a/style.css
+++ b/style.css
@@ -9,3 +9,8 @@ body{background-color: rgb(247, 0, 0); padding: 3px; font-style: italic;
 .basti{width: 10%;
 
 }
+.ari{ text-align: center;
+
+
+
+}
