--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .foto {width: 20%;
 }
 
-body{background-color: rgb(247, 0, 0); padding: 3px; font-style: italic;
+body{background-color: rgb(126, 0, 0); padding: 3px; font-style: italic; color: cyan;
      font-size: 8px;
 
 }
